AntlrParser/ArgumentsParser.java
// Generated from Arguments.g4 by ANTLR 4.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ArgumentsParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LiteralText=1, IntRange=2, Slash=3, Hyphen=4, QuotedString=5, Colon=6, 
		Equal=7, NUMBER=8, WS=9;
	public static final String[] tokenNames = {
		"<INVALID>", "LiteralText", "IntRange", "'/'", "'-'", "QuotedString", 
		"':'", "'='", "NUMBER", "WS"
	};
	public static final int
		RULE_init = 0, RULE_parameters = 1, RULE_parameter = 2, RULE_parameterName = 3, 
		RULE_fixedParameter = 4, RULE_value = 5, RULE_quotedString = 6;
	public static final String[] ruleNames = {
		"init", "parameters", "parameter", "parameterName", "fixedParameter", 
		"value", "quotedString"
	};

	@Override
	public String getGrammarFileName() { return "Arguments.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ArgumentsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class InitContext extends ParserRuleContext {
		public List<FixedParameterContext> fixedParameter() {
			return getRuleContexts(FixedParameterContext.class);
		}
		public TerminalNode WS(int i) {
			return getToken(ArgumentsParser.WS, i);
		}
		public FixedParameterContext fixedParameter(int i) {
			return getRuleContext(FixedParameterContext.class,i);
		}
		public List<TerminalNode> WS() { return getTokens(ArgumentsParser.WS); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArgumentsListener ) ((ArgumentsListener)listener).enterInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArgumentsListener ) ((ArgumentsListener)listener).exitInit(this);
		}
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_init);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(15);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LiteralText) | (1L << IntRange) | (1L << QuotedString) | (1L << NUMBER))) != 0)) {
				{
				setState(14); fixedParameter();
				}
			}

			setState(25);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(18); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(17); match(WS);
						}
						}
						setState(20); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==WS );
					setState(22); fixedParameter();
					}
					} 
				}
				setState(27);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(31);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(28); match(WS);
				}
				}
				setState(33);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(34); parameters();
			setState(38);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(35); match(WS);
				}
				}
				setState(40);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametersContext extends ParserRuleContext {
		public List<ParameterContext> parameter() {
			return getRuleContexts(ParameterContext.class);
		}
		public TerminalNode WS(int i) {
			return getToken(ArgumentsParser.WS, i);
		}
		public List<TerminalNode> WS() { return getTokens(ArgumentsParser.WS); }
		public ParameterContext parameter(int i) {
			return getRuleContext(ParameterContext.class,i);
		}
		public ParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArgumentsListener ) ((ArgumentsListener)listener).enterParameters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArgumentsListener ) ((ArgumentsListener)listener).exitParameters(this);
		}
	}

	public final ParametersContext parameters() throws RecognitionException {
		ParametersContext _localctx = new ParametersContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_parameters);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(41); parameter();
			setState(50);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(43); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(42); match(WS);
						}
						}
						setState(45); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==WS );
					setState(47); parameter();
					}
					} 
				}
				setState(52);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterContext extends ParserRuleContext {
		public List<ValueContext> value() {
			return getRuleContexts(ValueContext.class);
		}
		public TerminalNode WS(int i) {
			return getToken(ArgumentsParser.WS, i);
		}
		public ValueContext value(int i) {
			return getRuleContext(ValueContext.class,i);
		}
		public List<TerminalNode> WS() { return getTokens(ArgumentsParser.WS); }
		public ParameterNameContext parameterName() {
			return getRuleContext(ParameterNameContext.class,0);
		}
		public TerminalNode Colon() { return getToken(ArgumentsParser.Colon, 0); }
		public TerminalNode Equal() { return getToken(ArgumentsParser.Equal, 0); }
		public TerminalNode Slash() { return getToken(ArgumentsParser.Slash, 0); }
		public TerminalNode Hyphen() { return getToken(ArgumentsParser.Hyphen, 0); }
		public ParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArgumentsListener ) ((ArgumentsListener)listener).enterParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArgumentsListener ) ((ArgumentsListener)listener).exitParameter(this);
		}
	}

	public final ParameterContext parameter() throws RecognitionException {
		ParameterContext _localctx = new ParameterContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_parameter);
		int _la;
		try {
			int _alt;
			setState(77);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(53);
				_la = _input.LA(1);
				if ( !(_la==Slash || _la==Hyphen) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(54); parameterName();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(55);
				_la = _input.LA(1);
				if ( !(_la==Slash || _la==Hyphen) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(56); parameterName();
				setState(64);
				switch (_input.LA(1)) {
				case Colon:
					{
					setState(57); match(Colon);
					}
					break;
				case Equal:
					{
					setState(58); match(Equal);
					}
					break;
				case WS:
					{
					setState(60); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(59); match(WS);
						}
						}
						setState(62); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==WS );
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(73); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(66); value();
					setState(70);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
					while ( _alt!=2 && _alt!=-1 ) {
						if ( _alt==1 ) {
							{
							{
							setState(67); match(WS);
							}
							} 
						}
						setState(72);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
					}
					}
					}
					setState(75); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LiteralText) | (1L << IntRange) | (1L << QuotedString) | (1L << NUMBER))) != 0) );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterNameContext extends ParserRuleContext {
		public TerminalNode LiteralText() { return getToken(ArgumentsParser.LiteralText, 0); }
		public TerminalNode Hyphen() { return getToken(ArgumentsParser.Hyphen, 0); }
		public ParameterNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArgumentsListener ) ((ArgumentsListener)listener).enterParameterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArgumentsListener ) ((ArgumentsListener)listener).exitParameterName(this);
		}
	}

	public final ParameterNameContext parameterName() throws RecognitionException {
		ParameterNameContext _localctx = new ParameterNameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_parameterName);
		try {
			setState(82);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(79); match(LiteralText);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(80); match(LiteralText);
				setState(81); match(Hyphen);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FixedParameterContext extends ParserRuleContext {
		public QuotedStringContext quotedString() {
			return getRuleContext(QuotedStringContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode LiteralText() { return getToken(ArgumentsParser.LiteralText, 0); }
		public FixedParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fixedParameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArgumentsListener ) ((ArgumentsListener)listener).enterFixedParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArgumentsListener ) ((ArgumentsListener)listener).exitFixedParameter(this);
		}
	}

	public final FixedParameterContext fixedParameter() throws RecognitionException {
		FixedParameterContext _localctx = new FixedParameterContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_fixedParameter);
		try {
			setState(87);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(84); quotedString();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(85); match(LiteralText);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(86); value();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueContext extends ParserRuleContext {
		public List<TerminalNode> Colon() { return getTokens(ArgumentsParser.Colon); }
		public TerminalNode Hyphen(int i) {
			return getToken(ArgumentsParser.Hyphen, i);
		}
		public List<TerminalNode> Slash() { return getTokens(ArgumentsParser.Slash); }
		public TerminalNode Colon(int i) {
			return getToken(ArgumentsParser.Colon, i);
		}
		public TerminalNode Slash(int i) {
			return getToken(ArgumentsParser.Slash, i);
		}
		public List<TerminalNode> Hyphen() { return getTokens(ArgumentsParser.Hyphen); }
		public TerminalNode LiteralText(int i) {
			return getToken(ArgumentsParser.LiteralText, i);
		}
		public QuotedStringContext quotedString() {
			return getRuleContext(QuotedStringContext.class,0);
		}
		public TerminalNode IntRange() { return getToken(ArgumentsParser.IntRange, 0); }
		public List<TerminalNode> LiteralText() { return getTokens(ArgumentsParser.LiteralText); }
		public List<TerminalNode> Equal() { return getTokens(ArgumentsParser.Equal); }
		public TerminalNode NUMBER() { return getToken(ArgumentsParser.NUMBER, 0); }
		public TerminalNode Equal(int i) {
			return getToken(ArgumentsParser.Equal, i);
		}
		public ValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArgumentsListener ) ((ArgumentsListener)listener).enterValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArgumentsListener ) ((ArgumentsListener)listener).exitValue(this);
		}
	}

	public final ValueContext value() throws RecognitionException {
		ValueContext _localctx = new ValueContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_value);
		int _la;
		try {
			int _alt;
			setState(112);
			switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(89); quotedString();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(90); match(LiteralText);
				setState(102); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(92); 
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
						do {
							switch (_alt) {
							case 1:
								{
								{
								setState(91);
								_la = _input.LA(1);
								if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Slash) | (1L << Hyphen) | (1L << Colon) | (1L << Equal))) != 0)) ) {
								_errHandler.recoverInline(this);
								}
								consume();
								}
								}
								break;
							default:
								throw new NoViableAltException(this);
							}
							setState(94); 
							_errHandler.sync(this);
							_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
						} while ( _alt!=2 && _alt!=-1 );
						setState(99);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
						while ( _alt!=2 && _alt!=-1 ) {
							if ( _alt==1 ) {
								{
								{
								setState(96); match(LiteralText);
								}
								} 
							}
							setState(101);
							_errHandler.sync(this);
							_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
						}
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(104); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
				} while ( _alt!=2 && _alt!=-1 );
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(106); match(LiteralText);
				setState(107); match(Equal);
				setState(108); match(LiteralText);
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(109); match(IntRange);
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(110); match(NUMBER);
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(111); match(LiteralText);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QuotedStringContext extends ParserRuleContext {
		public TerminalNode QuotedString() { return getToken(ArgumentsParser.QuotedString, 0); }
		public QuotedStringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_quotedString; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ArgumentsListener ) ((ArgumentsListener)listener).enterQuotedString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ArgumentsListener ) ((ArgumentsListener)listener).exitQuotedString(this);
		}
	}

	public final QuotedStringContext quotedString() throws RecognitionException {
		QuotedStringContext _localctx = new QuotedStringContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_quotedString);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114); match(QuotedString);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}